--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "^0.4.4",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/node": "22.13.1",
     "@types/react": "19.0.8",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
